<resources>
    <string name="app_name">TP1</string>
    <string name="dany_ross">Dany Ross</string>
    <string name="site_web">Site Web (ext)</string>
    <string name="site_web_wv">Site Web (wv)</string>
    <string name="ulaval">Ulaval</string>
    <string name="mon_profil">Mon Profil</string>
    <string name="fermer">Fermer</string>
    <string name="myURLUlaval">https://monportail.ulaval.ca</string>
    <string name="title_activity_ulaval">UlavalActivity</string>
    <string name="UlavalActivity">ulavalActivity</string>
    <string name="title_activity_internal_browser">InternalBrowser</string>
    <string name="title_activity_profil_description">ProfilDescription</string>
    <string name="First_Name">Prénom:</string>
    <string name="Last_Name">Nom de famille:</string>
    <string name="Date_de_naissance">Date de naissance:</string>
    <string name="IDUL">IDUL:</string>
</resources>
