<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfilDescription"
    tools:showIn="@layout/activity_profil_description">

    <TextView
        android:id="@+id/firstName"
        android:layout_width="168dp"
        android:layout_height="21dp"
        android:layout_weight="1"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Prénom:" />

    <TextView
        android:id="@+id/firstNameInput"
        android:layout_width="168dp"
        android:layout_height="21dp"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_weight="1"
        android:ems="10"
        android:text="PUTENTRY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="168dp"
        android:layout_height="21dp"
        android:layout_marginTop="21dp"
        android:layout_weight="1"
        android:ems="10"
        android:text="@string/Last_Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastNameInput"
        android:layout_width="168dp"
        android:layout_height="21dp"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="21dp"
        android:layout_weight="1"
        android:ems="10"
        android:text="PUT ENTRY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="168dp"
        android:layout_height="21dp"
        android:layout_marginTop="42dp"
        android:layout_weight="1"
        android:ems="10"
        android:text="@string/Date_de_naissance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateInput"
        android:layout_width="168dp"
        android:layout_height="21dp"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="42dp"
        android:layout_weight="1"
        android:ems="10"
        android:text="putDATE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/IDUL"
        android:layout_width="168dp"
        android:layout_height="21dp"
        android:layout_marginTop="63dp"
        android:layout_weight="1"
        android:ems="10"
        android:text="@string/IDUL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inputIDUL"
        android:layout_width="168dp"
        android:layout_height="21dp"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="63dp"
        android:layout_weight="1"
        android:ems="6"
        android:text="IDUL TO ENTER"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>